# pygtail

./: .gitignore  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: autobot.yml  bandit.yml  conda.yml
conda/: meta.yaml
pygtail/: __init__.py  core.py
pygtail/test/: test_pygtail.py
