[metadata]
name = pygtail
description = Reads log file lines that have not been read.
url = https://github.com/bgreenlee/pygtail
author = Brad Greenlee
author_email = brad@footle.org
maintainer = Stephen Arnold
maintainer_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/x-rst
license_expression = GPL-2.0-or-later
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =

packages =
    pygtail
    pygtail.test

[options.entry_points]
console_scripts =
    pygtail = pygtail.core:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    sphinx_rtd_theme<3.0
    sphinxcontrib-apidoc
    myst-parser
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
